// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults 1`] = `
{
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
.*
!.babelrc
!.dockerignore
!.editorconfig
!.gitattributes
!.gitignore
!.gitkeep
!.npmignore
!.openssl
!.prettierignore
!.projenrc*
*.db
*.log
!.github/
!.projen/
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "default": {
        "description": "Synthesize project files",
        "name": "default",
        "steps": [
          {
            "exec": "node --loader ts-node/esm .projenrc.mts",
          },
        ],
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
}
`;

exports[`with Beachball configuration 1`] = `
{
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
.*
!.babelrc
!.dockerignore
!.editorconfig
!.gitattributes
!.gitignore
!.gitkeep
!.npmignore
!.openssl
!.prettierignore
!.projenrc*
*.db
*.log
*.tsbuildinfo
!.github/
!.projen/
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/tsconfig.json
!/beachball.config.js
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "beachball.config.js",
      "tsconfig.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "default": {
        "description": "Synthesize project files",
        "name": "default",
        "steps": [
          {
            "exec": "node --loader ts-node/esm .projenrc.mts",
          },
        ],
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  "beachball.config.js": "/** @type {import('beachball').BeachballConfig} */
module.exports = {
  "branch": "origin/main",
  "gitTags": false,
  "ignorePatterns": [
    "*.test.*",
    ".*/**",
    "__snapshots__/",
    "dist/",
    "node_modules/"
  ]
}",
  "tsconfig.json": {
    "$schema": "https://json.schemastore.org/tsconfig",
    "extends": "@langri-sha/tsconfig",
    "files": [
      "beachball.config.js",
    ],
  },
}
`;

exports[`with EditorConfig options 1`] = `
{
  ".editorconfig": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

root=true

[*]
charset=utf-8
end_of_line=lf
indent_style=space
indent_size=2
insert_final_newline=true
trim_trailing_whitespace=true

[Dockerfile]
indent_style=tab
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
.*
!.babelrc
!.dockerignore
!.editorconfig
!.gitattributes
!.gitignore
!.gitkeep
!.npmignore
!.openssl
!.prettierignore
!.projenrc*
*.db
*.log
!.github/
!.projen/
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.editorconfig
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".editorconfig",
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "default": {
        "description": "Synthesize project files",
        "name": "default",
        "steps": [
          {
            "exec": "node --loader ts-node/esm .projenrc.mts",
          },
        ],
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
}
`;

exports[`with Husky options 1`] = `
{
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
.*
!.babelrc
!.dockerignore
!.editorconfig
!.gitattributes
!.gitignore
!.gitkeep
!.npmignore
!.openssl
!.prettierignore
!.projenrc*
*.db
*.log
!.github/
!.husky/
!.projen/
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
",
  ".husky/pre-commit": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
lint-staged
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".gitignore",
      ".husky/pre-commit",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "default": {
        "description": "Synthesize project files",
        "name": "default",
        "steps": [
          {
            "exec": "node --loader ts-node/esm .projenrc.mts",
          },
        ],
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
}
`;

exports[`with Renovate options 1`] = `
{
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
.*
!.babelrc
!.dockerignore
!.editorconfig
!.gitattributes
!.gitignore
!.gitkeep
!.npmignore
!.openssl
!.prettierignore
!.projenrc*
*.db
*.log
!.github/
!.projen/
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/renovate.json5
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "renovate.json5",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "default": {
        "description": "Synthesize project files",
        "name": "default",
        "steps": [
          {
            "exec": "node --loader ts-node/esm .projenrc.mts",
          },
        ],
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  "renovate.json5": {
    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
    "configMigration": true,
    "extends": [
      "config:recommended",
    ],
    "labels": [
      "dependencies",
    ],
    "reviewersFromCodeOwners": true,
  },
}
`;

exports[`with Terraform enabled 1`] = `
{
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
.*
!.babelrc
!.dockerignore
!.editorconfig
!.gitattributes
!.gitignore
!.gitkeep
!.npmignore
!.openssl
!.prettierignore
!.projenrc*
!.terraform.lock.hcl
*.db
*.log
!.github/
!.projen/
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "default": {
        "description": "Synthesize project files",
        "name": "default",
        "steps": [
          {
            "exec": "node --loader ts-node/esm .projenrc.mts",
          },
        ],
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
}
`;

exports[`with TypeScript options 1`] = `
{
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
.*
!.babelrc
!.dockerignore
!.editorconfig
!.gitattributes
!.gitignore
!.gitkeep
!.npmignore
!.openssl
!.prettierignore
!.projenrc*
*.db
*.log
*.tsbuildinfo
!.github/
!.projen/
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/tsconfig.json
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "tsconfig.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "default": {
        "description": "Synthesize project files",
        "name": "default",
        "steps": [
          {
            "exec": "node --loader ts-node/esm .projenrc.mts",
          },
        ],
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  "tsconfig.json": {
    "$schema": "https://json.schemastore.org/tsconfig",
    "extends": "@langri-sha/tsconfig",
    "files": [
      "foo.js",
      "bar.js",
    ],
  },
}
`;

exports[`with code owners configured 1`] = `
{
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
.*
!.babelrc
!.dockerignore
!.editorconfig
!.gitattributes
!.gitignore
!.gitkeep
!.npmignore
!.openssl
!.prettierignore
!.projenrc*
*.db
*.log
!.github/
!.projen/
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/CODEOWNERS
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "CODEOWNERS",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "default": {
        "description": "Synthesize project files",
        "name": "default",
        "steps": [
          {
            "exec": "node --loader ts-node/esm .projenrc.mts",
          },
        ],
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  "CODEOWNERS": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
* @admin
",
}
`;

exports[`with workspaces 1`] = `
{
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
.*
!.babelrc
!.dockerignore
!.editorconfig
!.gitattributes
!.gitignore
!.gitkeep
!.npmignore
!.openssl
!.prettierignore
!.projenrc*
*.db
*.log
!.github/
!.projen/
packages/*/lib/
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/pnpm-workspace.yaml
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "pnpm-workspace.yaml",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "default": {
        "description": "Synthesize project files",
        "name": "default",
        "steps": [
          {
            "exec": "node --loader ts-node/esm .projenrc.mts",
          },
        ],
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  "pnpm-workspace.yaml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

packages:
  - packages/*
",
}
`;
